details on alignment fixed

--- a/app/assets/stylesheets/pages/_house.scss
+++ b/app/assets/stylesheets/pages/_house.scss
@@ -28,8 +28,7 @@
 }
 
 .house-shield {
-  width: 100px;
-  position: absolute;
-  top: -80px;
-  left: 75px;
+  width: 150px;
+  display: block;
+  margin: 0 auto;
 }
